fix pom, UIExtensions